human-intervention-logs/io.vertx:vertx-docgen:0.9.4/gradle-test/gradle-test-2026-07-13T23-45-01-517266Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.vertx:vertx-docgen:0.9.4
Command: `/home/mihailo/git/graalvm-reachability-metadata-copy/forge/local_repositories/forge_worktrees/7782-ad34cccd/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 2 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:processResources UP-TO-DATE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :jar

/home/mihailo/git/graalvm-reachability-metadata-copy/forge/local_repositories/forge_worktrees/7782-ad34cccd/tests/src/io.vertx/vertx-docgen/0.9.4/src/test/java/io_vertx/vertx_docgen/Vertx_docgenTest.java:121: error: incompatible types: DiagnosticCollector<JavaFileObject> cannot be converted to List<Diagnostic<? extends JavaFileObject>>
            assertThat(task.call()).as(diagnosticText(diagnostics)).isTrue();
> Task :compileTestJava FAILED
                                                      ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error

[Incubating] Problems report is available at: file:///home/mihailo/git/graalvm-reachability-metadata-copy/forge/local_repositories/forge_worktrees/7782-ad34cccd/tests/src/io.vertx/vertx-docgen/0.9.4/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.

  /home/mihailo/git/graalvm-reachability-metadata-copy/forge/local_repositories/forge_worktrees/7782-ad34cccd/tests/src/io.vertx/vertx-docgen/0.9.4/src/test/java/io_vertx/vertx_docgen/Vertx_docgenTest.java:121: error: incompatible types: DiagnosticCollector<JavaFileObject> cannot be converted to List<Diagnostic<? extends JavaFileObject>>
Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.
              assertThat(task.call()).as(diagnosticText(diagnostics)).isTrue();

                                                        ^
You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
  1 error
13 actionable tasks: 2 executed, 11 up-to-date

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 10s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/mihailo/git/graalvm-reachability-metadata-copy/forge/local_repositories/forge_worktrees/7782-ad34cccd/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.vertx:vertx-docgen:0.9.4 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 12s
9 actionable tasks: 1 executed, 8 up-to-date
